--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,20 +18,56 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.12.0 <3.0.0"
+  sdk: ">=2.2.2 <3.0.0"
+
+module:
+    androidX: true # Add this line.
 
 dependencies:
   flutter:
     sdk: flutter
 
-
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.2
+  cupertino_icons: ^1.0.3
+  flutter_swiper: ^1.1.4
+  url_launcher: ^6.0.6
+  provide: ^1.0.2
+  provider: ^5.0.0
+  dio: ^4.0.0 #latest version
+  http: ^0.13.3 #latest version
+  qr_flutter: ^4.0.0
+  webview_flutter: ^2.0.8
+  flutter_echarts: ^2.1.0
+  video_player: ^2.1.6
+  image_picker: ^0.8.0+3
+  vertical_tabs: ^0.2.0
+  rflutter_alert: ^2.0.2
+  fluttertoast: ^8.0.7
+  barcode_scan2: ^4.1.3
+  pull_to_refresh: ^2.0.0
+  azlistview: ^1.1.0
+  gesture_password_widget: ^2.0.0
+  scrollable_list_tabview: ^0.1.4
+  flutter_elegant_number_button: ^0.0.3
+  common_utils: ^2.0.2
+  flutter_webview_plugin: ^0.4.0
+  shared_preferences: ^2.0.6
+  flutter_launcher_icons: ^0.9.0
+  permission_handler: ^8.1.0 
+  battery: ^2.0.3
+  connectivity: ^3.0.6
+  overlay_support: ^1.2.1
+  
+flutter_icons:
+  image_path: "assets/s1.png"
+  android: true # can specify file name here e.g. "ic_launcher"
+  ios: true # can specify file name here e.g. "My-Launcher-Icon"
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -45,9 +81,13 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+    - images/swiper1.png
+    - images/swiper2.png
+    - images/swiper3.png
+    - images/swiper4.png
+    - images/timer.png
+   
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
@@ -60,10 +100,10 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
+  fonts:
+    - family: iconfont
+      fonts:
+       - asset: fonts/iconfont.ttf
   #       - asset: fonts/Schyler-Italic.ttf
   #         style: italic
   #   - family: Trajan Pro
@@ -74,3 +114,4 @@ flutter:
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
+  
