--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -41,5 +41,29 @@
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
+
+
+
+	<key>io.flutter.embedded_views_preview</key>
+    <string>使用flutter_echart</string>
+    
+	<!-- 使用video_player -->
+	<key>NSAppTransportSecurity</key>
+    <dict>
+    <key>NSAllowsArbitraryLoads</key>
+    <true/>
+    </dict>
+	
+	
+    <key>NSPhotoLibraryUsageDescription</key>
+    <string>访问相册权限</string>
+
+    <key>NSCameraUsageDescription</key>
+    <string>访问相机权限</string>
+
+
+
+
+
 </dict>
 </plist>
