flutter 运行于android平台

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,7 +1,15 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.citylife">
+
+    <uses-permission android:name="android.permission.INTERNET"/>
+     <!-- 使用video_player权限  -->
+    <uses-permission android:name="android.permission.CAMERA" />
+
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
+
    <application
-        android:label="citylife"
+        android:label="百姓生活"
         android:icon="@mipmap/ic_launcher">
         <activity
             android:name=".MainActivity"
